	ABORT and SKIPCHILD static members as returned values for action()
	method.
	* src/org/jcae/mesh/amibe/util/KdTree.java: In constructors, bbox
	is passed via a single double array instead of two.
	* src/org/jcae/mesh/amibe/traits/MeshTraitsBuilder.java
	  src/org/jcae/mesh/amibe/traits/TriangleTraitsBuilder.java: Let all
	add* methods return current instance so that they can be chained.

Wed Sep 26 00:27:45 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADShapeBuilder.java
	  src/org/jcae/mesh/cad/CADShapeFactory.java
	  src-occ/org/jcae/mesh/cad/occ/OCCShapeBuilder.java
	  src-occ/org/jcae/mesh/cad/occ/OCCShapeFactory.java: Rename
	  {CAD,OCC}ShapeBuilder classes into {CAD,OCC}ShapeFactory to
	  be consistent with common design pattern names.
	* src/org/jcae/mesh/cad/CADShapeFactory.java: Let factory member
	be private, and add a getFactory() public method.

Fri Sep 21 15:13:28 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/XMLHelper.java: Fix a bug in
	canonicalize(), foo/../bar/quux must return bar/quux and not
	foo/quux. Use an ArrayList to avoid loops.

Thu Sep 20 21:16:13 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/OEMM.java: Let OEMM.Node.adjLeaves member
	be transient. In trove 2.0, TIntArrayList serialVersionUID has been
	changed, thus OEMM instances stored on disk cannot be reloaded.
	To avoid similar problems in the future, OEMM.Node.adjLeaves is
	now stored as an int[] array.

Tue Sep 18 15:49:52 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Edge
	orientation must not depend on hashcodes so that results are
	reproducible.
	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: By default,
	use Quadric3DError.POS_OPTIMAL placement.
	* src/org/jcae/mesh/amibe/metrics/Quadric3DError.java: Let placement
	member be an enum instead of an int.