@@ -57,11 +57,6 @@ public class Mesh2D extends Mesh
 	//  Stack of methods to compute geometrical values
 	private transient final Stack<Calculus> compGeomStack = new Stack<Calculus>();
 	
-	/**
-	 * Structure to fasten search of nearest vertices.
-	 */
-	private transient KdTree quadtree = null;
-	
 	// Utility class to improve debugging output
 	private static class OuterVertex2D extends Vertex2D
 	{
@@ -85,9 +80,9 @@ public class Mesh2D extends Mesh
 	 */
 	public Mesh2D()
 	{
-		super();
-		MeshTraitsBuilder mtb = new MeshTraitsBuilder();
-		factory = new ElementPatchFactory(mtb);
+		// Always build a quadtree
+		super(new MeshTraitsBuilder().addKdTree(2));
+		factory = new ElementPatchFactory(traitsBuilder);
 		face = null;
 		surface = null;
 		init();
@@ -95,8 +90,9 @@ public class Mesh2D extends Mesh
 
 	public Mesh2D(MeshTraitsBuilder mtb)
 	{
-		super(mtb);
-		factory = new ElementPatchFactory(mtb);
+		// Always build a quadtree
+		super(mtb.addKdTree(2));
+		factory = new ElementPatchFactory(traitsBuilder);
 		face = null;
 		surface = null;
 		init();
@@ -115,8 +111,8 @@ public class Mesh2D extends Mesh
 	 */
 	public Mesh2D(MeshTraitsBuilder mtb, CADShape f)
 	{
-		super(mtb);
-		factory = new ElementPatchFactory(mtb);
+		super(mtb.addKdTree(2));
+		factory = new ElementPatchFactory(traitsBuilder);
 		face = f;
 		surface = ((CADFace) face).getGeomSurface();
 		init();
@@ -124,9 +120,9 @@ public class Mesh2D extends Mesh
 
 	public Mesh2D(CADShape f)
 	{
-		super();
-		MeshTraitsBuilder mtb = new MeshTraitsBuilder();
-		factory = new ElementPatchFactory(mtb);
+		// Always build a quadtree
+		super(new MeshTraitsBuilder().addKdTree(2));
+		factory = new ElementPatchFactory(traitsBuilder);
 		face = f;
 		surface = ((CADFace) face).getGeomSurface();
 		init();
@@ -193,11 +189,23 @@ public class Mesh2D extends Mesh
 	}
 	
 	/**
-	 * Initialize a KdTree with a given bounding box.
+	 * Returns the quadtree associated with this mesh.
+	 *
+	 * @return the quadtree associated with this mesh.
+	 */
+	public KdTree getQuadTree()
+	{
+		return traitsBuilder.getKdTree(traits);
+	}
+	
+	/**
+	 * Initializes quadtree with a given bounding box.  This method must be called before putting
+	 * any vertex into this quadtree.
+	 *
 	 * @param bbmin  coordinates of bottom-left vertex
 	 * @param bbmax  coordinates of top-right vertex
 	 */
-	public void initQuadTree(double [] bbmin, double [] bbmax)
+	public void resetQuadTree(double [] bbmin, double [] bbmax)
 	{
 		double [] bbox = new double[2*bbmin.length];
 		for (int i = 0; i < bbmin.length; i++)
@@ -205,18 +213,9 @@ public class Mesh2D extends Mesh
 			bbox[i] = bbmin[i];
 			bbox[i+bbmin.length] = bbmax[i];
 		}
-		quadtree = new KdTree(bbox);
+		KdTree quadtree = traitsBuilder.getKdTree(traits);
+		quadtree.setup(bbox);
 		outerVertex = new OuterVertex2D((bbmin[0]+bbmax[0])*0.5, (bbmin[1]+bbmax[1])*0.5);
-	}
-	
-	/**
-	 * Returns the quadtree associated with this mesh.
-	 *
-	 * @return the quadtree associated with this mesh.
-	 */
-	public KdTree getQuadTree()
-	{
-		return quadtree;
 	}
 	
 	/**
@@ -228,6 +227,7 @@ public class Mesh2D extends Mesh
 	@Override
 	public Collection<AbstractVertex> getNodes()
 	{
+		KdTree quadtree = traitsBuilder.getKdTree(traits);
 		if (quadtree == null)
 			return null;
 		return quadtree.getAllVertices(triangleList.size() / 2);
@@ -243,6 +243,7 @@ public class Mesh2D extends Mesh
 	 */
 	public void bootstrap(Vertex2D v0, Vertex2D v1, Vertex2D v2)
 	{
+		KdTree quadtree = traitsBuilder.getKdTree(traits);
 		assert quadtree != null;
 		assert v0.onLeft(this, v1, v2) != 0L;
 		if (v0.onLeft(this, v1, v2) < 0L)
@@ -467,6 +468,7 @@ public class Mesh2D extends Mesh
 	 */
 	private void clearAllMetrics()
 	{
+		KdTree quadtree = traitsBuilder.getKdTree(traits);
 		if (quadtree == null)
 			return;
 		ClearAllMetricsProcedure gproc = new ClearAllMetricsProcedure();
