@@ -72,7 +72,7 @@ public class QuadTreeTestRemove extends QuadTreeTest
 		double [] bbmax = { 1.0, 1.0 };
 		final Mesh2D m = new Mesh2D();
 		m.pushCompGeom(2);
-		m.initQuadTree(bbmin, bbmax);
+		m.resetQuadTree(bbmin, bbmax);
 		final QuadTreeTestRemove r = new QuadTreeTestRemove(m.getQuadTree());
 		logger.debug("Start insertion");
 		for (int i = 0; i < 500; i++)
